--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^6",
+    "jotai": "^1.7.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
